# buru

./: .dockerignore  .env  .gitignore  Cargo.toml  README.md  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
cli/: main.rs
docker/: Dockerfile
docker/nginx/: default.conf
migrations/postgres/: 20250619074146_init.sql
migrations/sqlite/: 20250619074146_init.sql
src/: app.rs  database.rs  dialect.rs  lib.rs  main.rs  parser.rs  query.rs  storage.rs
src/dialect/: postgres.rs  sqlite.rs
src/query/: image.rs  tag.rs
web/: image.rs  main.rs  post.rs  tag.rs
