[package]
name = "buru"
version = "0.1.0"
edition = "2024"

[dependencies]
glob = "0.3.2"
image = "0.25.6"
infer = "0.19.0"
md5 = "0.7.0"
sqlx = { version = "0.8", features = [ "runtime-tokio" ] }
thiserror = "2.0.12"
tokio = "1.44.2"

[dev-dependencies]
tempfile = "3.19.1"

[features]
default = ["sqlite"]

sqlite = ["sqlx/sqlite"]
