[package]
name = "buru"
version = "0.3.0"
edition = "2024"
authors = ["Takeru KODAMA <zen.en.tonal@gmail.com>"]
description = "A Rust application with both CLI and Web interface for data/image processing"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zen-en-tonal/buru"
homepage = "https://github.com/zen-en-tonal/buru"
documentation = "https://docs.rs/buru"
readme = "README.md"
keywords = ["cli", "web", "rust", "axum", "image"]
categories = ["command-line-utilities", "web-programming"]
exclude = [".github/", "Dockerfile", "docker-compose.yml"]

[dependencies]
chrono = "0.4.41"
glob = "0.3.2"
image = "0.25.6"
infer = "0.19.0"
sqlx = { version = "0.8", features = [ "runtime-tokio" ] }
thiserror = "2.0.12"
tokio = { version = "^1.45", features = ["rt", "macros", "rt-multi-thread"] }
nom = "8.0.0"
axum = { version = "0.8.4", features = ["multipart"] }
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
tracing-subscriber = "0.3.19"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15.7"
bytes = "1.10.1"
futures = "0.3"
twox-hash = "2.1"
video-rs = { version = "0.10", features = ["ndarray"] }
tempfile = "3.20.0"

[dev-dependencies]
tempfile = "3.20.0"

[features]
default = ["sqlite"]
sqlite = ["sqlx/sqlite"]

[[bin]]
name = "web"
path = "web/main.rs"

[[bin]]
name = "cli"
path = "cli/main.rs"

